[package]
name = "schismrs-bctides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["derive", "cargo"] }
dateparser = "0.2.1"
schismrs-hgrid = { version = "*",  path = "../hgrid" }
thiserror = "1.0.57"
