[package]
name = "schismrs-bctides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
chrono-humanize = "0.2.3"
clap = { version = "4.5.3", features = ["cargo", "derive"] }
dateparser = "0.2.1"
getargs = "0.5.0"
humantime = "2.1.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.4"
regex = "1.10.4"
schismrs-hgrid = { version = "*",  path = "../hgrid" }
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.57"
